Fix radio button css for ticket visiblity front end and backend

--- a/app/assets/css/sass/_follow-up.scss
+++ b/app/assets/css/sass/_follow-up.scss
@@ -630,7 +630,7 @@ img#hdspinner{
 }
 
 .rthd-visibility-wrap input[type="radio"]{
-	display: inline;
-	min-height: 0;
-	margin-top: 0;
+	display: inline-block;
+	min-height: inherit;
+	margin-top: auto;
 }
